// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input: Component should render correctly 1`] = `
<Component>
  <InputComponent>
    <input
      onChange={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "border": "none",
          "color": "#FFF",
          "fontFamily": "inherit",
          "fontSize": "18px",
          "fontWeight": "inherit",
          "letterSpacing": "normal",
          "lineHeight": "24px",
          "maxWidth": "100%",
          "minWidth": 100,
          "outline": "none",
          "padding": 0,
        }
      }
    />
  </InputComponent>
</Component>
`;

exports[`Input: Component should render with auto width 1`] = `
<Component
  withAutoWidth={
    Object {
      "autoWidth": true,
    }
  }
>
  <InputComponent
    withAutoWidth={
      Object {
        "autoWidth": true,
      }
    }
  >
    <input
      onChange={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "border": "none",
          "color": "#FFF",
          "fontFamily": "inherit",
          "fontSize": "18px",
          "fontWeight": "inherit",
          "letterSpacing": "normal",
          "lineHeight": "24px",
          "maxWidth": "100%",
          "minWidth": 100,
          "outline": "none",
          "padding": 0,
        }
      }
    />
  </InputComponent>
</Component>
`;

exports[`Input: Component should render with custom styles 1`] = `
<Component
  withCustomStyles={
    Object {
      "customStyles": Object {
        "color": "blue",
      },
    }
  }
>
  <InputComponent
    withCustomStyles={
      Object {
        "customStyles": Object {
          "color": "blue",
        },
      }
    }
  >
    <input
      onChange={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "border": "none",
          "color": "#FFF",
          "fontFamily": "inherit",
          "fontSize": "18px",
          "fontWeight": "inherit",
          "letterSpacing": "normal",
          "lineHeight": "24px",
          "maxWidth": "100%",
          "minWidth": 100,
          "outline": "none",
          "padding": 0,
        }
      }
    />
  </InputComponent>
</Component>
`;
